<resources>
    <string name="app_name">SK-Warranty</string>
    <string name="button1">Принята на склад</string>
    <string name="button2">Готово к отправке</string>
    <string name="NFC_inf">Поднесите телефон к NFC метке или введите ID  домофона вручную.\n</string>
    <string name="text">Ввод номера панели</string>
    <string name="track_number">Ввод трек номера панели</string>
    <string name="rb1">Изменить</string>
    <string name="rb2">Получить</string>
    <string name="To_check">В проверку</string>
    <string name="Repair">В ремонте</string>
    <string name="logs">Логи</string>
    <string name="STK">STK</string>
    <string name="SK_Warranty">SK-Warranty</string>
    <string name="version"> version 1.7</string>

</resources>