<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5A5A5"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/firsit"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="285dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="#ffffff"
            android:elegantTextHeight="false"
            android:ems="10"
            android:hint="@string/text"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="62dp"
            android:layout_marginTop="85dp"
            android:text="Статус:"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />


        <TextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="86dp"
            android:layout_toEndOf="@+id/ID"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toEndOf="@+id/ID"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <TextView
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"

            android:layout_marginTop="85dp"
            android:layout_toEndOf="@+id/textView5"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="#5B5B5B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firsit">


        <EditText
            android:id="@+id/track_number1"
            android:layout_width="285dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="65dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/track_number"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/button"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp"
            android:text="@string/button1"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:background="@drawable/rectangle_shape"
            android:shadowColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Third"
        android:layout_width="411dp"
        android:layout_height="117dp"
        android:background="#7D7D7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second">


        <Button
            android:id="@+id/Repair"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp"
            android:background="@drawable/rectangle_shape"
            android:text="В ремонте"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"
            tools:ignore="MissingConstraints" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/fifth"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#CFCFCF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Logs"
            android:layout_width="105dp"
            android:layout_height="62dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/rectangle_shape"

            android:onClick="startLogs"
            android:text="Логи"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="246dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:text="@string/NFC_inf"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent" />


    </RelativeLayout>

    <EditText
        android:id="@+id/track_number2"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/track_number"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Third" />

    <Button
        android:id="@+id/button2"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="88dp"

        android:background="@drawable/rectangle_shape"

        android:text="@string/button2"
        android:textColor="@color/black"
        android:textSize="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Third"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>